# sketchbot

./: .gitignore  .gitmodules  LICENSE  README.md
cv-pipeline/: main.py
cv_pipeline/: README.md  package.xml  requirements.txt  setup.cfg  setup.py
cv_pipeline/cv_pipeline/: cv_pipeline_service.py
cv_pipeline/cv_pipeline/linedraw/: linedraw.py  strokesort.py
data/: warehouse_ros.sqlite
drawbot/: package.xml  setup.cfg  setup.py
drawbot/drawbot/: drawbot_service.py
drawbot/launch/: drawbot.launch.py  drawbot_ur_bringup.launch.py  view_ur.launch.py
drawbot/meshes/visual/: tool.stl
drawbot/urdf/: .drawbot_tool.xacro.swp  drawbot_tool.xacro  drawbot_ur5e.xacro
drawbot_moveit_config/: package.xml  setup.py
drawbot_moveit_config/config/: kinematics.yaml  ur_servo.yaml
drawbot_moveit_config/launch/: ur_moveit.launch.py
drawbot_moveit_config/srdf/: ur.srdf.xacro  ur_macro.srdf.xacro
pathgen/: package.xml  readme.md  setup.cfg  setup.py
pathgen/pathgen/: svg2path_client.py  svg2path_service.py
scripts/: svg2path.py
sketch_controller/: CMakeLists.txt  package.xml
sketch_controller/cfg/: view_robot.rviz
sketch_controller/launch/: move_group_interface_tutorial.launch.py  sketch_controller.launch.py
sketch_controller/src/: move_group_interface_tutorial.cpp  sketch_control_server.cpp
sketchbot/: CMakeLists.txt  package.xml  readme.md
sketchbot/srv/: Svg2Path.srv
sketchbot_interfaces/: CMakeLists.txt  package.xml  readme.md
sketchbot_interfaces/srv/: Img2Svg.srv  Move2Pose.srv  Svg2Path.srv
src/sketch_controller/: package.xml
src/sketch_controller/launch/: move_group_interface_tutorial.launch.py
src/sketch_controller/src/: move_group_interface_tutorial.cpp
ur_simulation_gazebo/launch/: ur_sim_control.launch.py  ur_sim_moveit.launch.py
