<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>cv_pipeline</name>
  <version>0.0.0</version>
  <description>Convert camera image to drawable vector image.</description>
  <maintainer email="dassonva@oregonstate.edu">Andrew Dassonville</maintainer>
  <license>MIT</license>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>rembg</depend>

  <exec_depend>sketchbot_interfaces</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
